[tool.poetry]
name = "pe-logging"
version = "0.1.0"
description = ""
authors = ["Pedro Cavalcanti <pedro@monumentosoftware.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
google-cloud-logging = "^3.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
